* Now clearing the dirty flag when all changes are undone.
* Cleaned up the selection of objects on undo/redo.
* FS#236 - "include path for XPM Data incorrect."
^ All paths are now generated with '/' as a separator.
* Secondary bitmaps of wxBitmapButton are now only generated to XRC if they are used.
* The "select" property of notebook pages now corresponds to "selected" in XRC.

09/06/2007 Version 3.00.49 (RC2)
* wxStdDialogButtonSizer events now Connect() to the button, instead of the parent.
* Fixed "default" property for wxButton and wxBitmapButton.
* Fixed missing bitmap properties on wxBitmapButton.
* Applied patch from Ho Yin Kwok to check if the clipboard is open before opening it.
* Fixed hang if opened with a project of an older version.
* Fixed the find dialog only working one time.
* Fixed FS#230 - "Repainting issue with border drawn by wxFormBuilder"
* The value of the "precompiled_header" property should now be the exact code to be 
   generated at the top of the source file to support precompiled headers. For example, 
   to include wxprec.h, the value of this property should be:  #include <wx/wxprec.h>
  This forced a project version uprev to 1.8.  
  This closes FS#232 - "Precompiled headers with Visual C++ 2005".
* Removed #include <wx/wx.h> from the generated header.

08/21/2007 Version 3.00.48 (RC1)
+ FS#227 - "Custom control class name"
+ Added wxGenericDirCtrl
+ FS#173 - "Generate event handler stubs in Tools/Generate Inherited Class"

08/16/2007 Version 3.00.47 (Beta 3)
+ FS#223 - "missing wxTextCtrl style"
+ FS#222 - "Add an annoying dialog to the XRC Preview."
^ FS#116 - "Having property editor remember its expanded property groups."
^ FS#218 - "Having file dialogs remember their type-selection, e.g. *.png or *.bmp"
^ Added "All image files" to the file type filter for the file browser for
  bitmap properties.
* Switch to Code::Blocks splashscreen class to fix linux transparency.
  This resolves FS#224 - "Splashscreen problem in Linux".